<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@drawable/image_mine_bg_header"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <ImageView
            android:id="@+id/iv_mine_header_setting"
            android:src="@drawable/icon_mine_header_setting"
            android:layout_alignParentRight="true"
            android:layout_margin="30dp"
            android:layout_width="18dp"
            android:layout_height="18dp"/>
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_mine_portrait"
            android:scaleType="fitXY"
            app:roundAsCircle="true"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            app:roundedCornerRadius="5dp"
            android:layout_width="70dp"
            android:layout_height="70dp" />
        <TextView
            android:id="@+id/tv_mine_header_phone"
            android:text="未登录"
            android:layout_marginLeft="15dp"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/iv_mine_portrait"
            android:layout_marginTop="50dp"
            android:textColor="@color/splash_main_title_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_mine_personal_center"
            android:text="个人中心"
            android:drawableRight="@drawable/icon_mine_pager_header_toright"
            android:textColor="@color/splash_main_title_color"
            android:layout_below="@+id/tv_mine_header_phone"
            android:layout_toRightOf="@+id/iv_mine_portrait"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_mine_order"
                android:layout_marginTop="20dp"
                android:text="@string/myorder"
                android:paddingLeft="15dp"
                style="@style/MinePagerTextListStyle"/>
            <TextView
                style="@style/DividerTextView"/>
            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <TextView
                    android:id="@+id/tv_mine_grid_pay"
                    android:text="@string/waitPay"
                    style="@style/GridTextViewStyle"/>
                <TextView
                    android:id="@+id/tv_mine_grid_send_goods"
                    android:text="@string/send_goods"
                    style="@style/GridTextViewStyle"/>
                <TextView
                    android:id="@+id/tv_mine_grid_get_goods"
                    android:text="@string/receiving_goods"
                    style="@style/GridTextViewStyle"/>
                <TextView
                    android:id="@+id/tv_mine_grid_comment"
                    android:text="@string/comment"
                    style="@style/GridTextViewStyle"/>
                <TextView
                    android:id="@+id/tv_mine_grid_after_sale"
                    android:text="@string/grid_after_sale"
                    style="@style/GridTextViewStyle"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_mine_receiving_address"
                android:text="@string/mine_receiving_address_manager"
                style="@style/MinePagerTextListStyle"/>
            <TextView
                android:id="@+id/tv_mine_fav"
                android:text="@string/mine_fav"
                style="@style/MinePagerTextListStyle"/>
            <TextView
                style="@style/DividerTextView"/>
            <TextView
                android:id="@+id/tv_mine_history"
                android:text="@string/mine_history"
                style="@style/MinePagerTextListStyle"/>
            <TextView
                android:id="@+id/tv_mine_functional_feedback"
                android:text="@string/mine_functional_feedback"
                style="@style/MinePagerTextListStyle"/>
            <TextView
                android:id="@+id/tv_mine_about_bf"
                android:text="@string/mine_about_mushRomm"
                style="@style/MinePagerTextListStyle"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>